tests/cases/fail/parser/function-8/source.lua
function name:3() end